tests/Tree/negative/test010.jvt
-- calling unsupported anoma-decode

function main() : * {
  anoma-decode(1)
}
